# agentic-governance

./: .env.example  .gitignore  AGENTS.md  AUDIT-REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile.api  INSTALL_REPORT.md  LICENSE  PROGRESS.md  PROJECT_REVIEW.md  README.md  SERVER.md  detec-collector-pipeline.mmd  detec-infrastructure.mmd  detec-protocol-flow.mmd  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  package-lock.json  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  gateway.py  main.py  requirements.txt  server_cli.py  win_service.py
branding/: about-detec.css  about-detec.html  about-detec.md  accessibility.md  brand-foundation.md  brand-voice-guide.md  build-brief.sh  capability-brief.md  color-palette-reference.md  color-system.css  logo-usage-guidelines.md  naming-rationale.md  one-sheet.md  sales-pitch.md  tailwind-colors.js  typography.md  whitepaper.md
collector/: README.md  __init__.py  _version.py  agent_cli.py  config_loader.py  main.py  orchestrator.py  requirements.txt  session_report.py  win_agent_service.py
compliance/: README.md  TODO.md  comply.yml
dashboard/: Dockerfile  README.md  index.html  package-lock.json  package.json  server.js  tailwind.config.cjs  vite.config.js
deploy/: .env.production.template  README.md  fly-deploy.sh
diagrams/: agentic-ai-detection-response-visualization.html  full-architecture-diagram.html
docs/: architecture-calibration-pipeline.md  architecture-event-driven-telemetry.md  architecture-overview.md  behavioral-core-demo-pack.md  behavioral-core-policy-mapping.md  ci-security.md  ciso-executive-summary.md  compliance-mapping.md  container-remote-dev-detection.md  cross-agent-detection-design.md  dashboard-performance.md  dashboard-roadmap.md  data-privacy.md  demo.md  edr-credential-security.md  endpoint-footprint.md  enforcement-remaining-work.md  enforcement-roadmap.md  enterprise-oidc-okta.md  esf-entitlement.md  forward-priorities-tasklist.md  handoff-2026-03-12-docker.md  handoff-2026-03-12.md  handoff-installer-hardening-2026-03-10.md  hardening-checklist.md  lab-runs-and-results.md  large-fleet-scenario.md  macos-install-failure-notes.md  macos-permissions.md  mdm-deployment.md  product-status.md  review-pm-brief-implementation.md  rollback.md  secrets-management.md  secure-code-review.md  security-findings.md  security-review-agent-reliability.md  session-agent-download-fix-2026-03-10.md  session-agent-gui-wiring-2026-03-10.md  session-docker-deploy-2026-03-12.md  (+13 more)
init-issues/: INIT-13-claude-code-detection-profile.md  INIT-14-cursor-detection-profile.md  INIT-15-copilot-detection-profile.md  INIT-16-ollama-detection-profile.md  INIT-17-lm-studio-detection-profile.md  INIT-18-continue-detection-profile.md  INIT-19-open-interpreter-detection-profile.md  INIT-20-aider-detection-profile.md  INIT-21-gpt-pilot-detection-profile.md  INIT-22-cline-detection-profile.md  INIT-23-tool-class-policy-model.md  (+20 more)
(+572 files in other folders)
