[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-governance"
version = "0.3.0"
description = "Detec endpoint agent — agentic AI tool detection and governance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20.0",
    "watchdog>=4.0.0",
    "psutil>=7.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
detec-agent = "collector.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["collector", "collector*"]

[tool.pytest.ini_options]
testpaths = ["collector/tests"]
pythonpath = ["collector"]
