[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-governance"
version = "0.3.0"
description = "Detec endpoint agent — agentic AI tool detection and governance"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Detec", email = "legal@detec.io"},
]
dependencies = [
    "jsonschema>=4.20.0",
    "watchdog>=4.0.0",
    "psutil>=7.0.0",
    "cryptography>=42.0.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
gui = [
    "rumps>=0.4.0",
    "Pillow>=10.0.0",
]

[project.scripts]
detec-agent = "collector.agent_cli:main"

[project.gui-scripts]
detec-agent-gui = "collector.gui.menubar:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["collector", "collector*", "protocol", "protocol*"]

[tool.pytest.ini_options]
testpaths = ["collector/tests"]
pythonpath = ["collector"]
